Post Game Update

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
 
 	<div class="container">
 		
-		<img src="yes.png" width="400px" alt="Yes" />
+		<img src="no.png" width="400px" alt="Yes" />
 		
 	</div>
 	
 </body>
 
 </html>
+
+<!--
+10/23/2024: Win
+-->
